Update saveAsHtml method

--- a/src/main/java/com/jatrix/printer/matrix.html
+++ b/src/main/java/com/jatrix/printer/matrix.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Another web page</title>
+	<title>Matrix output</title>
 	<link rel="stylesheet" href="table.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"></head>
 <body>
