--- a/src/main/java/com/jatrix/printer/matrix.html
+++ b/src/main/java/com/jatrix/printer/matrix.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Matrix output</title>
 	<link rel="stylesheet" href="table.css">
+	<link rel="icon" type="image/gif" href="https://github.com/danilos1/jatrix/blob/master/images/logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"></head>
 <body>
 	<h1>Current matrix</h1>
